[package]
name = "rust-ed"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
lazy_static = "1.3.0"
#redux-bundler-rs = {git="https://github.com/pietgeursen/redux_bundler_rs"}
redux-bundler-rs = {path="../redux_bundler_rs"}
regex = "1"
ropey = "1.0.0"
