[package]
name = "rust-ed"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
crosstermion = {version = "0.5.0", features = ["termion", "tui", "tui-termion", "input-async"]}
futures = "0.3.8"
futures-lite = "1.11.2"
inu-rs = {path = "../inu-rs"}
lazy_static = "1.3.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
#redux-bundler-rs = {git="https://github.com/pietgeursen/redux_bundler_rs"}
#redux-bundler-rs = {path="../redux_bundler_rs"}
regex = "1"
ropey = "1.0.0"
smol = "1.2.5"
termion = "1.5"
